[gd_scene load_steps=4 format=3 uid="uid://c4xa4sn4p1kan"]

[ext_resource type="Script" path="res://scripts/main/player/weapon_controller.gd" id="1_lnh1g"]
[ext_resource type="Theme" uid="uid://caaprjqu8fva7" path="res://misc/misc/main_ui_theme.tres" id="2_ax8oj"]

[sub_resource type="LabelSettings" id="LabelSettings_bmsbf"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="WeaponController" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_lnh1g")

[node name="WeaponSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
scale = Vector2(0.6, 0.6)

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="Reloading" type="Label" parent="."]
z_index = 5
offset_left = -43.0
offset_top = -41.0
offset_right = 43.0
offset_bottom = -16.0
theme = ExtResource("2_ax8oj")
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 28
text = "Reloading"
label_settings = SubResource("LabelSettings_bmsbf")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
